--- a/tratamento/teste.ipynb
+++ b/tratamento/teste.ipynb
@@ -301,7 +301,95 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "conn = pyodbc.connect(r'Driver={Microsoft Access Driver (*.mdb, *.accdb)};DBQ=C:\\colocar_aqui_o_endereco_da_pasta\\nome_do_banco_access.accdb;')\n",
+    "# abrindo conexão com access \n",
+    "\n",
+    "cursor = conn.cursor()\n",
+    "cursor.execute('select PESQUISA, id_cnpj from cns_Enderecos_empresas where result_lat_long is null') # fazendo select para abrir uma tabela\n",
+    "\n",
+    "tabela = cursor.fetchall()\n",
+    "\n",
+    "url = \"https://developers-dot-devsite-v2-prod.appspot.com/maps/documentation/utils/geocoder#q%3D\"\n",
+    "print(url)\n",
+    "driver = webdriver.Chrome(executable_path='./chromedriver.exe') #chromedriver.exe\n",
+    "driver.get(url)\n",
+    "time.sleep(5)\n",
+    "\n",
+    "for endereco in tabela:    \n",
+    "    element = driver.find_element_by_id(\"query-input\")\n",
+    "    element.clear()\n",
+    "    element.send_keys(endereco.PESQUISA) \n",
+    "    driver.find_element_by_id(\"geocode-button\").click() #clicando no botão para pesquisqar\n",
+    "    time.sleep(2)\n",
+    "\n",
+    "    \n",
+    "    id_cnpj1 = endereco.id_cnpj\n",
+    "    element = driver.find_element_by_id(\"result-0\") \n",
+    "    element2 = driver.find_element_by_id(\"result-0\") \n",
+    "    element = element.find_element_by_class_name(\"result-location\")\n",
+    "    element2 = element2.find_element_by_class_name(\"result-formatted-address\")\n",
+    "    lat_long =  element.text\n",
+    "    endereco_econtrado = element2.text\n",
+    "    endereco_econtrado = endereco_econtrado.replace(\"'\",\"¹\")\n",
+    "\n",
+    "    lat_long = lat_long.replace(\" (type: ROOFTOP)\",\"\") #substituindo palavras\n",
+    "    lat_long = lat_long.replace(\"Location: \",\"\")  #substituindo palavras\n",
+    "    lat_long = lat_long.replace(\" (type: GEOMETRIC_CENTER)\",\"\")  #substituindo palavras\n",
+    "    lat_long = lat_long.replace(\" (type: RANGE_INTERPOLATED)\",\"\")  #substituindo palavras\n",
+    "    endereco = endereco.PESQUISA\n",
+    "\n",
+    "    print (endereco)     \n",
+    "    print(lat_long, \" - \", endereco_econtrado)\n",
+    "    \n",
+    "    sql = \"\"\"\\\n",
+    "        UPDATE tb_Dcnpj\n",
+    "        SET result_lat_long ='{lat_long}',\n",
+    "        endereco_encontrado ='{endereco_econtrado}'\n",
+    "        WHERE id_cnpj ={id_cnpj1}\n",
+    "        \"\"\".format(lat_long=lat_long,id_cnpj1=id_cnpj1,endereco_econtrado=endereco_econtrado) #montando sql para inserir lat e long na base\n",
+    "\n",
+    "    cursor.execute(sql) #executando sql\n",
+    "    conn.commit()\n",
+    "    print('-----')\n",
+    "    print('-----')\n",
+    "\n",
+    "\n",
+    "driver.quit()\n",
+    "cursor.quit()\n",
+    "conn.quit()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
