--- a/tratamento/tratamento_dados.ipynb
+++ b/tratamento/tratamento_dados.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "(7884545, 16)"
+       "(12184449, 16)"
       ]
      },
      "execution_count": 3,
@@ -350,83 +350,83 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>7884540</th>\n",
-       "      <td>XXXX87XX6X7</td>\n",
-       "      <td>13</td>\n",
-       "      <td>CAMPO GRANDE</td>\n",
-       "      <td>500270</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>BRANCA</td>\n",
-       "      <td>79092180</td>\n",
+       "      <th>12184444</th>\n",
+       "      <td>XXXX95X3XX7</td>\n",
+       "      <td>12</td>\n",
+       "      <td>LAGES</td>\n",
+       "      <td>420930</td>\n",
+       "      <td>FEMININO</td>\n",
+       "      <td>INDEFENIDA</td>\n",
+       "      <td>88501050</td>\n",
        "      <td>ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...</td>\n",
-       "      <td>0010375</td>\n",
-       "      <td>79086110</td>\n",
-       "      <td>MÉDICO ALERGISTA E IMUNOLOGISTA</td>\n",
+       "      <td>0305685</td>\n",
+       "      <td>88520000</td>\n",
+       "      <td>PSICOPEDAGOGO</td>\n",
        "      <td>PRIORIDADE 3 - ATENDIMENTO ELETIVO</td>\n",
-       "      <td>2021-12-15</td>\n",
+       "      <td>2022-03-29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CONFIRMADO</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12184445</th>\n",
+       "      <td>XXXX98XXXX7</td>\n",
+       "      <td>70</td>\n",
+       "      <td>IRAI</td>\n",
+       "      <td>431050</td>\n",
+       "      <td>FEMININO</td>\n",
+       "      <td>BRANCA</td>\n",
+       "      <td>98460000</td>\n",
+       "      <td>ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...</td>\n",
+       "      <td>2228580</td>\n",
+       "      <td>98430000</td>\n",
+       "      <td>MÉDICO DERMATOLOGISTA</td>\n",
+       "      <td>PRIORIDADE 3 - ATENDIMENTO ELETIVO</td>\n",
+       "      <td>2022-03-31</td>\n",
        "      <td>14</td>\n",
        "      <td>CONFIRMADO</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7884541</th>\n",
-       "      <td>XXXX92X43X7</td>\n",
-       "      <td>39</td>\n",
-       "      <td>SANTA CRUZ DO RIO PARDO</td>\n",
-       "      <td>354640</td>\n",
-       "      <td>FEMININO</td>\n",
+       "      <th>12184446</th>\n",
+       "      <td>XXXXX6X21X7</td>\n",
+       "      <td>78</td>\n",
+       "      <td>EUNAPOLIS</td>\n",
+       "      <td>291072</td>\n",
+       "      <td>MASCULINO</td>\n",
        "      <td>BRANCA</td>\n",
-       "      <td>18900296</td>\n",
+       "      <td>45820120</td>\n",
        "      <td>ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...</td>\n",
-       "      <td>2030284</td>\n",
-       "      <td>18900000</td>\n",
-       "      <td>MÉDICO EM CIRURGIA VASCULAR</td>\n",
+       "      <td>6294189</td>\n",
+       "      <td>45820440</td>\n",
+       "      <td>MÉDICO OTORRINOLARINGOLOGISTA</td>\n",
        "      <td>PRIORIDADE 3 - ATENDIMENTO ELETIVO</td>\n",
-       "      <td>2021-12-14</td>\n",
-       "      <td>48</td>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>9</td>\n",
        "      <td>CONFIRMADO</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7884542</th>\n",
-       "      <td>XXXXX4X89X7</td>\n",
-       "      <td>52</td>\n",
-       "      <td>CRICIUMA</td>\n",
-       "      <td>420460</td>\n",
+       "      <th>12184447</th>\n",
+       "      <td>XXXXX7X63X7</td>\n",
+       "      <td>46</td>\n",
+       "      <td>CHAPECO</td>\n",
+       "      <td>420420</td>\n",
        "      <td>MASCULINO</td>\n",
        "      <td>BRANCA</td>\n",
-       "      <td>88818455</td>\n",
+       "      <td>89801000</td>\n",
        "      <td>ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...</td>\n",
-       "      <td>2419971</td>\n",
-       "      <td>88809340</td>\n",
-       "      <td>MÉDICO NEFROLOGISTA</td>\n",
-       "      <td>PRIORIDADE 3 - ATENDIMENTO ELETIVO</td>\n",
-       "      <td>2021-12-17</td>\n",
-       "      <td>21</td>\n",
-       "      <td>CONFIRMADO</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7884543</th>\n",
-       "      <td>XXXXX6X32X7</td>\n",
-       "      <td>44</td>\n",
-       "      <td>NOVA OLIMPIA</td>\n",
-       "      <td>510623</td>\n",
-       "      <td>MASCULINO</td>\n",
-       "      <td>AMARELA</td>\n",
-       "      <td>78370000</td>\n",
-       "      <td>ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...</td>\n",
-       "      <td>9841903</td>\n",
-       "      <td>78010100</td>\n",
+       "      <td>2537753</td>\n",
+       "      <td>89802105</td>\n",
        "      <td>MÉDICO ORTOPEDISTA E TRAUMATOLOGISTA</td>\n",
        "      <td>PRIORIDADE 1 - URGÊNCIA, ATENDIMENTO O MAIS RÁ...</td>\n",
-       "      <td>2021-12-16</td>\n",
-       "      <td>51</td>\n",
-       "      <td>CONFIRMADO</td>\n",
+       "      <td>2022-03-22</td>\n",
+       "      <td>157</td>\n",
+       "      <td>FALTA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7884544</th>\n",
+       "      <th>12184448</th>\n",
        "      <td>XXXXX9X26X7</td>\n",
        "      <td>43</td>\n",
        "      <td>SAO LUIS</td>\n",
@@ -439,9 +439,9 @@
        "      <td>65057420</td>\n",
        "      <td>MÉDICO GINECOLOGISTA E OBSTETRA</td>\n",
        "      <td>PRIORIDADE 3 - ATENDIMENTO ELETIVO</td>\n",
-       "      <td>2021-12-11</td>\n",
-       "      <td>53</td>\n",
-       "      <td>CONFIRMADO</td>\n",
+       "      <td>2022-03-28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>FALTA</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -449,47 +449,47 @@
        "</div>"
       ],
       "text/plain": [
-       "         CNS_USUARIO  IDADE_USUARIO        MUNICIPIO_USUARIO IBGE_USUARIO  \\\n",
-       "7884540  XXXX87XX6X7             13             CAMPO GRANDE       500270   \n",
-       "7884541  XXXX92X43X7             39  SANTA CRUZ DO RIO PARDO       354640   \n",
-       "7884542  XXXXX4X89X7             52                 CRICIUMA       420460   \n",
-       "7884543  XXXXX6X32X7             44             NOVA OLIMPIA       510623   \n",
-       "7884544  XXXXX9X26X7             43                 SAO LUIS       211130   \n",
+       "          CNS_USUARIO  IDADE_USUARIO MUNICIPIO_USUARIO IBGE_USUARIO  \\\n",
+       "12184444  XXXX95X3XX7             12             LAGES       420930   \n",
+       "12184445  XXXX98XXXX7             70              IRAI       431050   \n",
+       "12184446  XXXXX6X21X7             78         EUNAPOLIS       291072   \n",
+       "12184447  XXXXX7X63X7             46           CHAPECO       420420   \n",
+       "12184448  XXXXX9X26X7             43          SAO LUIS       211130   \n",
        "\n",
-       "        SEXO_USUARIO RACA_COR_USUARIO CEP_USUARIO  \\\n",
-       "7884540    MASCULINO           BRANCA    79092180   \n",
-       "7884541     FEMININO           BRANCA    18900296   \n",
-       "7884542    MASCULINO           BRANCA    88818455   \n",
-       "7884543    MASCULINO          AMARELA    78370000   \n",
-       "7884544     FEMININO            PRETA    65059844   \n",
+       "         SEXO_USUARIO RACA_COR_USUARIO CEP_USUARIO  \\\n",
+       "12184444     FEMININO       INDEFENIDA    88501050   \n",
+       "12184445     FEMININO           BRANCA    98460000   \n",
+       "12184446    MASCULINO           BRANCA    45820120   \n",
+       "12184447    MASCULINO           BRANCA    89801000   \n",
+       "12184448     FEMININO            PRETA    65059844   \n",
        "\n",
-       "                                              DESLOCAMENTO CNES_EXECUTANTE  \\\n",
-       "7884540  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         0010375   \n",
-       "7884541  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         2030284   \n",
-       "7884542  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         2419971   \n",
-       "7884543  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         9841903   \n",
-       "7884544  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         0838535   \n",
+       "                                               DESLOCAMENTO CNES_EXECUTANTE  \\\n",
+       "12184444  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         0305685   \n",
+       "12184445  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         2228580   \n",
+       "12184446  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         6294189   \n",
+       "12184447  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         2537753   \n",
+       "12184448  ATENDIDO NO MESMO MUNICIPIO DE RESIDENCIA DO U...         0838535   \n",
        "\n",
-       "        CEP_UNID_EXECUTANTE                         ESPECIALIDADE  \\\n",
-       "7884540            79086110       MÉDICO ALERGISTA E IMUNOLOGISTA   \n",
-       "7884541            18900000           MÉDICO EM CIRURGIA VASCULAR   \n",
-       "7884542            88809340                   MÉDICO NEFROLOGISTA   \n",
-       "7884543            78010100  MÉDICO ORTOPEDISTA E TRAUMATOLOGISTA   \n",
-       "7884544            65057420       MÉDICO GINECOLOGISTA E OBSTETRA   \n",
+       "         CEP_UNID_EXECUTANTE                         ESPECIALIDADE  \\\n",
+       "12184444            88520000                         PSICOPEDAGOGO   \n",
+       "12184445            98430000                 MÉDICO DERMATOLOGISTA   \n",
+       "12184446            45820440         MÉDICO OTORRINOLARINGOLOGISTA   \n",
+       "12184447            89802105  MÉDICO ORTOPEDISTA E TRAUMATOLOGISTA   \n",
+       "12184448            65057420       MÉDICO GINECOLOGISTA E OBSTETRA   \n",
        "\n",
-       "                                                 GRAVIDADE  DATA_ATEND  \\\n",
-       "7884540                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2021-12-15   \n",
-       "7884541                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2021-12-14   \n",
-       "7884542                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2021-12-17   \n",
-       "7884543  PRIORIDADE 1 - URGÊNCIA, ATENDIMENTO O MAIS RÁ...  2021-12-16   \n",
-       "7884544                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2021-12-11   \n",
+       "                                                  GRAVIDADE  DATA_ATEND  \\\n",
+       "12184444                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2022-03-29   \n",
+       "12184445                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2022-03-31   \n",
+       "12184446                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2022-03-23   \n",
+       "12184447  PRIORIDADE 1 - URGÊNCIA, ATENDIMENTO O MAIS RÁ...  2022-03-22   \n",
+       "12184448                 PRIORIDADE 3 - ATENDIMENTO ELETIVO  2022-03-28   \n",
        "\n",
-       "         TEMPO_ESPERA  CONF_ATEND  quant  \n",
-       "7884540            14  CONFIRMADO      1  \n",
-       "7884541            48  CONFIRMADO      1  \n",
-       "7884542            21  CONFIRMADO      1  \n",
-       "7884543            51  CONFIRMADO      1  \n",
-       "7884544            53  CONFIRMADO      1  "
+       "          TEMPO_ESPERA  CONF_ATEND  quant  \n",
+       "12184444             0  CONFIRMADO      1  \n",
+       "12184445            14  CONFIRMADO      1  \n",
+       "12184446             9  CONFIRMADO      1  \n",
+       "12184447           157       FALTA      1  \n",
+       "12184448             5       FALTA      1  "
       ]
      },
      "execution_count": 5,
@@ -512,7 +512,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7884545 entries, 0 to 7884544\n",
+      "RangeIndex: 12184449 entries, 0 to 12184448\n",
       "Data columns (total 16 columns):\n",
       " #   Column               Dtype \n",
       "---  ------               ----- \n",
@@ -533,7 +533,7 @@
       " 14  CONF_ATEND           object\n",
       " 15  quant                int64 \n",
       "dtypes: int64(3), object(13)\n",
-      "memory usage: 962.5+ MB\n"
+      "memory usage: 1.5+ GB\n"
      ]
     }
    ],
@@ -579,37 +579,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7884545 entries, 0 to 7884544\n",
-      "Data columns (total 14 columns):\n",
-      " #   Column               Dtype \n",
-      "---  ------               ----- \n",
-      " 0   IDADE_USUARIO        int64 \n",
-      " 1   MUNICIPIO_USUARIO    object\n",
-      " 2   IBGE_USUARIO         object\n",
-      " 3   SEXO_USUARIO         object\n",
-      " 4   RACA_COR_USUARIO     object\n",
-      " 5   CEP_USUARIO          object\n",
-      " 6   DESLOCAMENTO         object\n",
-      " 7   CNES_EXECUTANTE      object\n",
-      " 8   CEP_UNID_EXECUTANTE  object\n",
-      " 9   ESPECIALIDADE        object\n",
-      " 10  GRAVIDADE            object\n",
-      " 11  DATA_ATEND           object\n",
-      " 12  TEMPO_ESPERA         int64 \n",
-      " 13  CONF_ATEND           object\n",
-      "dtypes: int64(2), object(12)\n",
-      "memory usage: 842.2+ MB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df_dados.info()"
    ]
