--- a/tratamento/teste.ipynb
+++ b/tratamento/teste.ipynb
@@ -410,6 +410,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "https://www.youtube.com/watch?v=lK8ANM7VkNU "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://www.youtube.com/watch?v=gtymrMMRNTY&t=279s "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://www.youtube.com/watch?v=LIfscd9SNLo&t=627s"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "https://www.youtube.com/watch?v=IKIA_e6aJsw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
