--- a/teste_piloto/teste_distancia.ipynb
+++ b/teste_piloto/teste_distancia.ipynb
@@ -28,13 +28,13 @@
    "outputs": [],
    "source": [
     "#instalação de biblioteca (opcional)\n",
-    "import pip\n",
-    "pip.main([\"install\",\"pandas\",\"folium\",\"matplotlib\",\"geopy\",\"requests\",\"urllib\"])"
+    "#import pip\n",
+    "#pip.main([\"install\",\"pandas\",\"folium\",\"matplotlib\",\"geopy\",\"requests\",\"urllib\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,15 +71,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "#importação de dados\n",
-    "df_original = pd.read_csv('../SISREG_Estudo_caso-AI_FALTAS_USUARIOS/dados/DADOS_SISREG_teste.csv', \n",
+    "df_original = pd.read_csv('../dados/base_teste/DADOS_SISREG_teste.csv', \n",
     "    dtype={'CNES_EXECUTANTE':'str','IBGE_USUARIO':'str','CEP_USUARIO':'str', 'CEP_UNID_EXECUTANTE':'str'}) \n",
-    "df_cep = pd.read_csv('../SISREG_Estudo_caso-AI_FALTAS_USUARIOS/dados/TABELA_CEP_BR.txt', \n",
-    "    dtype=str, sep=\"\t\", header=None)\n",
+    "df_cep = pd.read_csv('../dados/CEP/TABELA_CEP_BR.txt', dtype=str, sep=\"\t\", header=None)\n",
     "df_cep.columns = ['CEP','UF','CIDADE','BAIRRO','LOGRADOURO']\n"
    ]
   },
@@ -92,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +100,7 @@
        "(849343, 5)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +173,7 @@
        "4    89745000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +330,7 @@
        "15                             Rua 31 - Luziânia - GO  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +543,7 @@
        "22  (Rua Venâncio Neiva, Centro, Campina Grande, R...  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +743,7 @@
        "33  Rua Doutor Edésio Silva         -7.249646         -35.891586  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1045,8 +1044,8 @@
        "      <td>Blumenau</td>\n",
        "      <td>Garcia</td>\n",
        "      <td>Rua Amazonas</td>\n",
-       "      <td>-26.924576</td>\n",
-       "      <td>-49.056230</td>\n",
+       "      <td>-26.953393</td>\n",
+       "      <td>-49.070215</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>72</th>\n",
@@ -1276,8 +1275,8 @@
        "      <td>Embu das Artes</td>\n",
        "      <td>Jardim São Luiz</td>\n",
        "      <td>Avenida João Paulo I</td>\n",
-       "      <td>-23.636191</td>\n",
-       "      <td>-46.827736</td>\n",
+       "      <td>-23.639056</td>\n",
+       "      <td>-46.821944</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>111</th>\n",
@@ -1737,7 +1736,7 @@
        "55         -16.134300         -47.967799  \n",
        "59         -23.641276         -46.813344  \n",
        "60         -23.648028         -46.829646  \n",
-       "64         -26.924576         -49.056230  \n",
+       "64         -26.953393         -49.070215  \n",
        "72         -16.254222         -47.905962  \n",
        "73         -23.657123         -46.817509  \n",
        "75         -16.260042         -47.932733  \n",
@@ -1758,7 +1757,7 @@
        "106        -23.650577         -46.815583  \n",
        "107        -16.250980         -47.914567  \n",
        "108        -15.779761         -47.778981  \n",
-       "110        -23.636191         -46.827736  \n",
+       "110        -23.639056         -46.821944  \n",
        "111        -16.237506         -47.945554  \n",
        "114         -7.230878         -35.905235  \n",
        "116        -16.157767         -47.936472  \n",
@@ -1787,19 +1786,19 @@
        "172        -23.674961         -46.844585  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "#nomeação das colunas para usuarios\n",
-    "df_ceps_usuario.rename(columns={'CEP':'CEP_USUARIO', 'UF':'UF_USUARIO' , 'CIDADE':'CIDADE_USUARIO' , 'BAIRRO':'BAIRRO_USUARIO' ,'LOGRADOURO':'LOGRADOURO_USUARIO' })"
+    "df_ceps_usuario.rename(columns={'CEP':'CEP_USUARIO', 'UF':'UF_USUARIO' , 'CIDADE':'CIDADE_USUARIO' , 'BAIRRO':'BAIRRO_USUARIO' ,'LOGRADOURO':'LOGRADOURO_USUARIO' })\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1825,7 +1824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2067,7 +2066,7 @@
        "4         -46.865803  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2086,7 +2085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2146,7 @@
        "12            78556144"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2163,7 +2162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2182,7 +2181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2192,7 +2191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2303,7 +2302,7 @@
        "5  Avenida Rosilene Xavier Transpadini - Cacoal - RO  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2317,7 +2316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -2471,7 +2470,7 @@
        "10  (Avenida das Embaubas, Sinop, Região Geográfic...  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2486,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2496,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -2613,7 +2612,7 @@
        "10  (Avenida das Embaubas, Sinop, Região Geográfic...  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2625,7 +2624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -2735,7 +2734,7 @@
        "10     Avenida das Embaúbas        -11.859557         -55.499867  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2751,7 +2750,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -2777,7 +2776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -3061,7 +3060,7 @@
        "4  Rua Delmiro Gouveia           -7.2273          -35.89734  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3080,7 +3079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3101,7 +3100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -3398,7 +3397,7 @@
        "4                             3.67  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3409,7 +3408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -3463,7 +3462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -3503,7 +3502,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3521,7 +3520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -4430,7 +4429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -4452,7 +4451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4461,7 +4460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4470,7 +4469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4484,94 +4483,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\otavi\\GitHub\\SISREG_Estudo_caso-AI_FALTAS_USUARIOS\\teste_piloto\\teste_distancia.ipynb Célula: 43\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/otavi/GitHub/SISREG_Estudo_caso-AI_FALTAS_USUARIOS/teste_piloto/teste_distancia.ipynb#X60sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m baseMap \u001b[39m=\u001b[39m baseMap\u001b[39m.\u001b[39madd_child(plugins\u001b[39m.\u001b[39;49mHeatMap(coordenadas))\n",
+      "File \u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python310\\site-packages\\folium\\plugins\\heat_map.py:72\u001b[0m, in \u001b[0;36mHeatMap.__init__\u001b[1;34m(self, data, name, min_opacity, max_zoom, radius, blur, gradient, overlay, control, show, **kwargs)\u001b[0m\n\u001b[0;32m     69\u001b[0m data \u001b[39m=\u001b[39m if_pandas_df_convert_to_numpy(data)\n\u001b[0;32m     70\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata \u001b[39m=\u001b[39m [[\u001b[39m*\u001b[39mvalidate_location(line[:\u001b[39m2\u001b[39m]), \u001b[39m*\u001b[39mline[\u001b[39m2\u001b[39m:]]  \u001b[39m# noqa: E999\u001b[39;00m\n\u001b[0;32m     71\u001b[0m              \u001b[39mfor\u001b[39;00m line \u001b[39min\u001b[39;00m data]\n\u001b[1;32m---> 72\u001b[0m \u001b[39mif\u001b[39;00m np\u001b[39m.\u001b[39many(np\u001b[39m.\u001b[39;49misnan(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdata)):\n\u001b[0;32m     73\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mdata may not contain NaNs.\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m     74\u001b[0m \u001b[39mif\u001b[39;00m kwargs\u001b[39m.\u001b[39mpop(\u001b[39m'\u001b[39m\u001b[39mmax_val\u001b[39m\u001b[39m'\u001b[39m, \u001b[39mNone\u001b[39;00m):\n",
+      "\u001b[1;31mTypeError\u001b[0m: ufunc 'isnan' not supported for the input types, and the inputs could not be safely coerced to any supported types according to the casting rule ''safe''"
+     ]
+    }
+   ],
    "source": [
     "baseMap = baseMap.add_child(plugins.HeatMap(coordenadas))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"width:100%;\"><div style=\"position:relative;width:100%;height:0;padding-bottom:60%;\"><span style=\"color:#565656\">Make this Notebook Trusted to load map: File -> Trust Notebook</span><iframe srcdoc=\"&lt;!DOCTYPE html&gt;\n",
-       "&lt;head&gt;    \n",
-       "    &lt;meta http-equiv=&quot;content-type&quot; content=&quot;text/html; charset=UTF-8&quot; /&gt;\n",
-       "    \n",
-       "        &lt;script&gt;\n",
-       "            L_NO_TOUCH = false;\n",
-       "            L_DISABLE_3D = false;\n",
-       "        &lt;/script&gt;\n",
-       "    \n",
-       "    &lt;style&gt;html, body {width: 100%;height: 100%;margin: 0;padding: 0;}&lt;/style&gt;\n",
-       "    &lt;style&gt;#map {position:absolute;top:0;bottom:0;right:0;left:0;}&lt;/style&gt;\n",
-       "    &lt;script src=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://code.jquery.com/jquery-1.12.4.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;script src=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.js&quot;&gt;&lt;/script&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/npm/leaflet@1.6.0/dist/leaflet.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdnjs.cloudflare.com/ajax/libs/Leaflet.awesome-markers/2.0.2/leaflet.awesome-markers.css&quot;/&gt;\n",
-       "    &lt;link rel=&quot;stylesheet&quot; href=&quot;https://cdn.jsdelivr.net/gh/python-visualization/folium/folium/templates/leaflet.awesome.rotate.min.css&quot;/&gt;\n",
-       "    \n",
-       "            &lt;meta name=&quot;viewport&quot; content=&quot;width=device-width,\n",
-       "                initial-scale=1.0, maximum-scale=1.0, user-scalable=no&quot; /&gt;\n",
-       "            &lt;style&gt;\n",
-       "                #map_537a0422a256b9e9ddb77dbee3be9393 {\n",
-       "                    position: relative;\n",
-       "                    width: 100.0%;\n",
-       "                    height: 100.0%;\n",
-       "                    left: 0.0%;\n",
-       "                    top: 0.0%;\n",
-       "                }\n",
-       "            &lt;/style&gt;\n",
-       "        \n",
-       "&lt;/head&gt;\n",
-       "&lt;body&gt;    \n",
-       "    \n",
-       "            &lt;div class=&quot;folium-map&quot; id=&quot;map_537a0422a256b9e9ddb77dbee3be9393&quot; &gt;&lt;/div&gt;\n",
-       "        \n",
-       "&lt;/body&gt;\n",
-       "&lt;script&gt;    \n",
-       "    \n",
-       "            var map_537a0422a256b9e9ddb77dbee3be9393 = L.map(\n",
-       "                &quot;map_537a0422a256b9e9ddb77dbee3be9393&quot;,\n",
-       "                {\n",
-       "                    center: [-15.77972, -47.92972],\n",
-       "                    crs: L.CRS.EPSG3857,\n",
-       "                    zoom: 4,\n",
-       "                    zoomControl: true,\n",
-       "                    preferCanvas: false,\n",
-       "                }\n",
-       "            );\n",
-       "\n",
-       "            \n",
-       "\n",
-       "        \n",
-       "    \n",
-       "            var tile_layer_8f447f76cadad3aaca589008d9766635 = L.tileLayer(\n",
-       "                &quot;https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png&quot;,\n",
-       "                {&quot;attribution&quot;: &quot;Data by \\u0026copy; \\u003ca href=\\&quot;http://openstreetmap.org\\&quot;\\u003eOpenStreetMap\\u003c/a\\u003e, under \\u003ca href=\\&quot;http://www.openstreetmap.org/copyright\\&quot;\\u003eODbL\\u003c/a\\u003e.&quot;, &quot;detectRetina&quot;: false, &quot;maxNativeZoom&quot;: 18, &quot;maxZoom&quot;: 18, &quot;minZoom&quot;: 0, &quot;noWrap&quot;: false, &quot;opacity&quot;: 1, &quot;subdomains&quot;: &quot;abc&quot;, &quot;tms&quot;: false}\n",
-       "            ).addTo(map_537a0422a256b9e9ddb77dbee3be9393);\n",
-       "        \n",
-       "&lt;/script&gt;\" style=\"position:absolute;width:100%;height:100%;left:0;top:0;border:none !important;\" allowfullscreen webkitallowfullscreen mozallowfullscreen></iframe></div></div>"
-      ],
-      "text/plain": [
-       "<folium.folium.Map at 0x1c436a193c0>"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "baseMap"
    ]
